--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "dependencies": {
     "firebase": "^4.10.1",
     "react": "^16.2.0",
+    "react-disqus-thread": "^0.4.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "semantic-ui-css": "^2.3.0",
-    "semantic-ui-react": "^0.78.2"
+    "semantic-ui-react": "^0.78.2",
+    "showdown": "^1.8.6"
   },
   "scripts": {
     "start": "react-scripts start",
